--- a/remoteroofing/src/App.css
+++ b/remoteroofing/src/App.css
@@ -1,8 +1,15 @@
+* {
+  box-sizing: border-box;
+}
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   height: 100%;
+}
+form {
+  display: block;
+  margin-top: 0em;
 }
 a {
   color: #017afe;
@@ -11,6 +18,7 @@ a {
 }
 body {
   font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+  color: #333;
   font-size: 14px;
 }
 body, h5 {
