--- a/remoteroofing/src/components/SearchBar/SearchBar.css
+++ b/remoteroofing/src/components/SearchBar/SearchBar.css
@@ -1,6 +1,9 @@
 
 .searchBar {
+    z-index: 0;
     display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     align-items: center;
     position: relative;
     border-radius: 50px;
@@ -12,25 +15,71 @@
     background-color: white;
     box-shadow: 1px 1px 3px 0 black;
 }
-input {
-    background-color: transparent;
+.inputDiv {
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+.textInput {
     border: none;
     height: 100%;
-    width: 55%;
+    width: 100%;
+    border: 1px solid transparent;
+    font-family: AirbnbCerealLight, sans-serif;
+    font-size: 16px;
+    height: 38px;
+    display: block;
+    padding: 8px 12px;
+    line-height: 1.42857143;
+    color: #333;
+    background-color: transparent;
 }
-button {
-    width: 35%;
-    height: 90%;
+.submitButton {
+    color: white;
+    background-color: #017afe;
+    min-width: auto;
+    max-width: 190px;
+    font-size: 14px;
+    padding: 0 20px;
+    margin-right: 10px;
+    height: 45px;
     border-radius: 50px;
+    border-style: none;
+    border-color: none;
 }
 .homeIconDiv {
     display: flex;
     align-items: center;
-    justify-content: center;
-    height: 60px;
-    width: 10%;
+    margin-right: 10px;
+    padding-left: 5px;
 }
-img {
-    height: 50%;
-    width: 50%;
+.homeIconImg {
+    margin-left: 10px;
+    width: 30px;
+}
+
+@media screen and (max-width: 479px) {
+    .textInput {
+        font-size: 16px;
+    }
+}
+@media screen and (max-width: 330px) {
+    .textInput {
+        margin-left: 10px;
+    }
+    .homeIconDiv {
+        display: none;
+    }
+}
+@media screen and (max-width: 991px) {
+    .homeIconImg {
+        max-width: 70%;
+    }
+    .homeIconDiv {
+        min-width: 30px;
+    }
+    .inputDiv {
+        width: 55%;
+    }
 }
